--- a/src/index.css
+++ b/src/index.css
@@ -10728,6 +10728,7 @@ legend {
 }
 .background {
   background: linear-gradient(180deg, #f9f9f9 0%, #ececf0 100%);
+  height:52rem;
 }
 .cardform-title {
   font-family: 'Brawler';
