--- a/src/index.css
+++ b/src/index.css
@@ -11085,3 +11085,64 @@ font-size: 4.5vh;
   top:-4rem;
   border-radius:3rem;
 }
+.notification{
+  width:70%;
+  height:20%;
+  object-fit:cover ;
+}
+
+.PopupNotice {
+  position: fixed;
+
+  left: 25%;
+  top: 30%;
+
+  width: 50%;  
+  height:20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: -2px 5px 5px var(--bs-dark);
+}
+.PopupNotice2 {
+  position: fixed;
+  left: 25%;
+  top: 30%;
+  border: 0.063rem solid rgba(0, 0, 0, 0.125);
+  width: 50%;  
+  height:20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border-color: #6cc3d5 !important;
+  background:var(--bs-light);
+  border-radius:3rem;
+}
+.notice {
+  font-family: 'Brawler';
+  font-style: normal;
+  font-weight: 500;
+  font-size:1.875rem;
+}
+.btn-notice{
+  margin-left:1rem;
+  font-family: 'Brawler';
+  font-style: normal;
+  font-weight: 500;
+  font-size:1.875rem;
+  color: #737373;
+  border:0px;
+  background:transparent;
+}
+
+.Pending {
+}
+.Accepted {
+  color:var(--bs-success)
+}
+
+.Regected {
+  color:var(--bs-red)
+}
