--- a/src/index.css
+++ b/src/index.css
@@ -11112,8 +11112,8 @@ legend {
   left: 25%;
   top: 30%;
   border: 0.063rem solid rgba(0, 0, 0, 0.125);
-  width: 50%;
-  height: 20%;
+  width: 60%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11121,6 +11121,11 @@ legend {
   border-color: #6cc3d5 !important;
   background: var(--bs-light);
   border-radius: 3rem;
+  overflow-x: scroll;
+  white-space: nowrap;
+  margin: 20px;
+  text-align: justify;
+  padding: 20px;
 }
 .notice {
   font-family: 'Brawler';
@@ -11145,7 +11150,7 @@ legend {
   color: var(--bs-success);
 }
 
-.Regected {
+.Rejected {
   color: var(--bs-red);
 }
 .adjust {
